@@ -3,7 +3,7 @@
   <ProjectSession>
     <Version Value="11"/>
     <BuildModes Active="Default"/>
-    <Units Count="79">
+    <Units Count="85">
       <Unit0>
         <Filename Value="testsuite.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -13,20 +13,19 @@
       <Unit1>
         <Filename Value="TestManager.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="3"/>
-        <TopLine Value="176"/>
-        <CursorPos X="12" Y="192"/>
+        <EditorIndex Value="6"/>
+        <TopLine Value="67"/>
+        <CursorPos X="12" Y="66"/>
         <UsageCount Value="50"/>
         <Loaded Value="True"/>
       </Unit1>
       <Unit2>
         <Filename Value="Test1.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="2"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="42"/>
         <CursorPos X="78" Y="59"/>
         <UsageCount Value="50"/>
-        <Loaded Value="True"/>
       </Unit2>
       <Unit3>
         <Filename Value="test2.pas"/>
@@ -94,16 +93,18 @@
       <Unit12>
         <Filename Value="Test11.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="-1"/>
+        <EditorIndex Value="9"/>
+        <TopLine Value="263"/>
+        <CursorPos X="61" Y="276"/>
         <UsageCount Value="50"/>
+        <Loaded Value="True"/>
       </Unit12>
       <Unit13>
         <Filename Value="Test12.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="38"/>
         <UsageCount Value="50"/>
-        <Loaded Value="True"/>
       </Unit13>
       <Unit14>
         <Filename Value="Test13.pas"/>
@@ -114,11 +115,10 @@
       <Unit15>
         <Filename Value="Test14.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="4"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="94"/>
         <CursorPos Y="114"/>
         <UsageCount Value="50"/>
-        <Loaded Value="True"/>
       </Unit15>
       <Unit16>
         <Filename Value="Test15.pas"/>
@@ -142,10 +142,11 @@
       </Unit18>
       <Unit19>
         <Filename Value="../client/FBClientAPI.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="413"/>
-        <CursorPos X="88" Y="429"/>
+        <EditorIndex Value="11"/>
+        <TopLine Value="172"/>
+        <CursorPos X="28" Y="198"/>
         <UsageCount Value="10"/>
+        <Loaded Value="True"/>
       </Unit19>
       <Unit20>
         <Filename Value="../IBUtils.pas"/>
@@ -156,17 +157,16 @@
       </Unit20>
       <Unit21>
         <Filename Value="../client/FBSQLData.pas"/>
-        <EditorIndex Value="1"/>
-        <TopLine Value="1212"/>
-        <CursorPos Y="1241"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="516"/>
+        <CursorPos X="44" Y="541"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
-          <TopLine Value="516"/>
-          <CursorPos X="44" Y="541"/>
+          <TopLine Value="1212"/>
+          <CursorPos Y="1241"/>
         </ExtraEditor1>
         <UsageCount Value="16"/>
-        <Loaded Value="True"/>
       </Unit21>
       <Unit22>
         <Filename Value="../client/FBMessages.pas"/>
@@ -177,9 +177,9 @@
       </Unit22>
       <Unit23>
         <Filename Value="../IB.pas"/>
-        <EditorIndex Value="11"/>
-        <TopLine Value="411"/>
-        <CursorPos X="3" Y="428"/>
+        <EditorIndex Value="7"/>
+        <TopLine Value="1150"/>
+        <CursorPos Y="1173"/>
         <UsageCount Value="17"/>
         <Loaded Value="True"/>
       </Unit23>
@@ -198,17 +198,19 @@
       </Unit25>
       <Unit26>
         <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="405"/>
-        <CursorPos Y="434"/>
+        <EditorIndex Value="13"/>
+        <TopLine Value="346"/>
+        <CursorPos X="3" Y="350"/>
         <UsageCount Value="18"/>
+        <Loaded Value="True"/>
       </Unit26>
       <Unit27>
         <Filename Value="../client/2.5/FB25ClientAPI.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="663"/>
-        <CursorPos X="42" Y="689"/>
+        <EditorIndex Value="12"/>
+        <TopLine Value="184"/>
+        <CursorPos X="14" Y="180"/>
         <UsageCount Value="18"/>
+        <Loaded Value="True"/>
       </Unit27>
       <Unit28>
         <Filename Value="/usr/share/fpcsrc/rtl/inc/dynlibs.pas"/>
@@ -219,11 +221,10 @@
       </Unit28>
       <Unit29>
         <Filename Value="../client/FBAttachment.pas"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="165"/>
         <CursorPos X="43" Y="169"/>
         <UsageCount Value="13"/>
-        <Loaded Value="True"/>
       </Unit29>
       <Unit30>
         <Filename Value="../client/FBStatement.pas"/>
@@ -378,11 +379,10 @@
       </Unit51>
       <Unit52>
         <Filename Value="../client/3.0/FB30Array.pas"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="278"/>
         <CursorPos X="1024" Y="311"/>
         <UsageCount Value="10"/>
-        <Loaded Value="True"/>
       </Unit52>
       <Unit53>
         <Filename Value="../client/2.5/FB25Array.pas"/>
@@ -442,11 +442,10 @@
       </Unit60>
       <Unit61>
         <Filename Value="../../../../fpcsrc/3.0.4/rtl/inc/generic.inc"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="807"/>
         <CursorPos Y="830"/>
         <UsageCount Value="10"/>
-        <Loaded Value="True"/>
       </Unit61>
       <Unit62>
         <Filename Value="../../ibx/design/IBDBReg.pas"/>
@@ -457,9 +456,9 @@
       </Unit62>
       <Unit63>
         <Filename Value="../changelog"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="5"/>
-        <CursorPos X="50" Y="19"/>
+        <EditorIndex Value="2"/>
+        <TopLine Value="4"/>
+        <CursorPos X="5" Y="25"/>
         <UsageCount Value="11"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
@@ -489,9 +488,12 @@
       </Unit66>
       <Unit67>
         <Filename Value="../../fbintf.fb4/changelog"/>
-        <EditorIndex Value="-1"/>
-        <CursorPos X="76" Y="83"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="1"/>
+        <TopLine Value="20"/>
+        <CursorPos Y="26"/>
         <UsageCount Value="11"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
       </Unit67>
       <Unit68>
@@ -510,9 +512,11 @@
       </Unit69>
       <Unit70>
         <Filename Value="../../fbintf.fb4/client/3.0/FB30ClientAPI.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="198"/>
+        <EditorIndex Value="14"/>
+        <TopLine Value="629"/>
+        <CursorPos X="3" Y="650"/>
         <UsageCount Value="10"/>
+        <Loaded Value="True"/>
       </Unit70>
       <Unit71>
         <Filename Value="../../fbintf.fb4/client/3.0/FB30Array.pas"/>
@@ -566,133 +570,177 @@
       </Unit77>
       <Unit78>
         <Filename Value="/usr/share/fpcsrc/rtl/objpas/sysutils/sysstrh.inc"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="84"/>
         <CursorPos X="10" Y="100"/>
         <UsageCount Value="11"/>
-        <Loaded Value="True"/>
       </Unit78>
+      <Unit79>
+        <Filename Value="../../fbintf.fb4/testsuite/Test11.pas"/>
+        <EditorIndex Value="3"/>
+        <TopLine Value="279"/>
+        <CursorPos X="31" Y="239"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit79>
+      <Unit80>
+        <Filename Value="../../fbintf.fb4/testsuite/FBTestApp.pas"/>
+        <EditorIndex Value="4"/>
+        <TopLine Value="26"/>
+        <CursorPos X="41" Y="42"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit80>
+      <Unit81>
+        <Filename Value="../../fbintf.fb4/testsuite/testApp/TestApplication.pas"/>
+        <EditorIndex Value="5"/>
+        <TopLine Value="821"/>
+        <CursorPos X="3" Y="825"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit81>
+      <Unit82>
+        <Filename Value="../../fbintf.fb4/FBClientLib.pas"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="21"/>
+        <UsageCount Value="10"/>
+      </Unit82>
+      <Unit83>
+        <Filename Value="../../fbintf.fb4/client/FBClientAPI.pas"/>
+        <EditorIndex Value="10"/>
+        <TopLine Value="198"/>
+        <CursorPos Y="227"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit83>
+      <Unit84>
+        <Filename Value="../../fbintf.fb4/IB.pas"/>
+        <EditorIndex Value="8"/>
+        <TopLine Value="1271"/>
+        <CursorPos Y="1292"/>
+        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+      </Unit84>
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="Test1.pas"/>
-        <Caret Line="138" TopLine="116"/>
+        <Filename Value="../../fbintf.fb4/testsuite/testApp/TestApplication.pas"/>
+        <Caret Line="83" Column="24" TopLine="61"/>
       </Position1>
       <Position2>
-        <Filename Value="Test1.pas"/>
-        <Caret Line="139" TopLine="116"/>
+        <Filename Value="TestManager.pas"/>
+        <Caret Line="194" Column="44" TopLine="176"/>
       </Position2>
       <Position3>
-        <Filename Value="Test1.pas"/>
-        <Caret Line="140" TopLine="116"/>
+        <Filename Value="../../fbintf.fb4/testsuite/testApp/TestApplication.pas"/>
+        <Caret Line="267" Column="3" TopLine="261"/>
       </Position3>
       <Position4>
-        <Filename Value="Test1.pas"/>
-        <Caret Line="141" TopLine="116"/>
+        <Filename Value="TestManager.pas"/>
+        <Caret Line="31" TopLine="22"/>
       </Position4>
       <Position5>
-        <Filename Value="Test1.pas"/>
-        <Caret Line="146" TopLine="119"/>
+        <Filename Value="../../fbintf.fb4/testsuite/testApp/TestApplication.pas"/>
+        <Caret Line="83" Column="22" TopLine="66"/>
       </Position5>
       <Position6>
-        <Filename Value="Test1.pas"/>
-        <Caret Line="147" TopLine="120"/>
+        <Filename Value="Test11.pas"/>
+        <Caret Line="276" Column="61" TopLine="263"/>
       </Position6>
       <Position7>
-        <Filename Value="Test1.pas"/>
-        <Caret Line="77" TopLine="60"/>
+        <Filename Value="TestManager.pas"/>
+        <Caret Line="78" Column="24" TopLine="58"/>
       </Position7>
       <Position8>
-        <Filename Value="Test1.pas"/>
-        <Caret Line="78" TopLine="60"/>
+        <Filename Value="../../fbintf.fb4/testsuite/testApp/TestApplication.pas"/>
+        <Caret Line="164" Column="34" TopLine="147"/>
       </Position8>
       <Position9>
-        <Filename Value="Test1.pas"/>
-        <Caret Line="150" TopLine="134"/>
+        <Filename Value="TestManager.pas"/>
+        <Caret Line="756" TopLine="734"/>
       </Position9>
       <Position10>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1229" TopLine="1223"/>
+        <Filename Value="../../fbintf.fb4/testsuite/testApp/TestApplication.pas"/>
+        <Caret Line="878" Column="34" TopLine="858"/>
       </Position10>
       <Position11>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1230" TopLine="1223"/>
+        <Filename Value="../../fbintf.fb4/testsuite/testApp/TestApplication.pas"/>
+        <Caret Line="160" Column="21" TopLine="143"/>
       </Position11>
       <Position12>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1232" TopLine="1223"/>
+        <Filename Value="TestManager.pas"/>
+        <Caret Line="75" Column="21" TopLine="73"/>
       </Position12>
       <Position13>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1233" TopLine="1223"/>
+        <Filename Value="TestManager.pas"/>
+        <Caret Line="711" Column="8" TopLine="694"/>
       </Position13>
       <Position14>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1234" TopLine="1223"/>
+        <Filename Value="../IB.pas"/>
+        <Caret Line="426" Column="80" TopLine="411"/>
       </Position14>
       <Position15>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1235" TopLine="1223"/>
+        <Filename Value="../../fbintf.fb4/client/FBClientAPI.pas"/>
+        <Caret TopLine="100"/>
       </Position15>
       <Position16>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1230" TopLine="1223"/>
+        <Filename Value="../../fbintf.fb4/client/3.0/FB30ClientAPI.pas"/>
       </Position16>
       <Position17>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1232" TopLine="1223"/>
+        <Filename Value="../../fbintf.fb4/client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="118" Column="35" TopLine="91"/>
       </Position17>
       <Position18>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1233" TopLine="1223"/>
+        <Filename Value="../../fbintf.fb4/IB.pas"/>
+        <Caret Line="20" Column="18"/>
       </Position18>
       <Position19>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1234" TopLine="1223"/>
+        <Filename Value="../../fbintf.fb4/IB.pas"/>
+        <Caret Line="246" Column="15" TopLine="218"/>
       </Position19>
       <Position20>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1235" TopLine="1223"/>
+        <Filename Value="../../fbintf.fb4/IB.pas"/>
+        <Caret Line="294" Column="52" TopLine="266"/>
       </Position20>
       <Position21>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1230" TopLine="1223"/>
+        <Filename Value="../../fbintf.fb4/IB.pas"/>
+        <Caret Line="1012" Column="42" TopLine="984"/>
       </Position21>
       <Position22>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1232" TopLine="1223"/>
+        <Filename Value="../../fbintf.fb4/IB.pas"/>
+        <Caret Line="1228" Column="42" TopLine="1200"/>
       </Position22>
       <Position23>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1233" TopLine="1223"/>
+        <Filename Value="../../fbintf.fb4/IB.pas"/>
+        <Caret Line="1251" Column="42" TopLine="1223"/>
       </Position23>
       <Position24>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1241" TopLine="1223"/>
+        <Filename Value="../client/FBClientAPI.pas"/>
+        <Caret Line="429" Column="88" TopLine="413"/>
       </Position24>
       <Position25>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1275" TopLine="1259"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="427" Column="68" TopLine="404"/>
       </Position25>
       <Position26>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1276" TopLine="1259"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="111" Column="22" TopLine="102"/>
       </Position26>
       <Position27>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1277" TopLine="1259"/>
+        <Filename Value="../client/FBClientAPI.pas"/>
+        <Caret Line="154" Column="55" TopLine="142"/>
       </Position27>
       <Position28>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1304" TopLine="1288"/>
+        <Filename Value="../client/FBClientAPI.pas"/>
+        <Caret Line="176" Column="34" TopLine="148"/>
       </Position28>
       <Position29>
-        <Filename Value="../client/FBSQLData.pas"/>
-        <Caret Line="1835" TopLine="1818"/>
+        <Filename Value="../client/2.5/FB25ClientAPI.pas"/>
+        <Caret Line="688" Column="74" TopLine="662"/>
       </Position29>
       <Position30>
-        <Filename Value="Test1.pas"/>
-        <Caret Line="59" TopLine="42"/>
+        <Filename Value="../IB.pas"/>
+        <Caret Line="1173" TopLine="1150"/>
       </Position30>
     </JumpHistory>
     <RunParams>
